# byunghoonauto

./: .gitignore  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
backend/: config.py  database.py  models.py
backend/routers/: chapters.py  creation_history.py  extraction.py  pdf_generate.py  problem_sets.py  problems.py  students.py  wrong_answers.py
backend/services/: extractor.py  image_store.py  integrity.py  pdf_generator.py
backend/utils/: paths.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/common/: Button.tsx  ConfirmDialog.tsx  Modal.tsx
frontend/src/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/src/components/problem-set/: ExtractionProgress.tsx  FolderInput.tsx  ProblemSetCard.tsx
frontend/src/components/student/: StudentCard.tsx  StudentForm.tsx
frontend/src/components/verification/: BulkShiftModal.tsx  ImageCard.tsx  ImageGrid.tsx  NumberEditor.tsx
frontend/src/components/wrong-answer/: ChapterPicker.tsx  HistoryPanel.tsx  NumberInput.tsx  (+4 more)
frontend/src/hooks/: useExtraction.ts  useProblemSets.ts  useProblems.ts  useStudents.ts  useWrongAnswers.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: BatchPrintPage.tsx  ImportPage.tsx  ProblemSetListPage.tsx  StudentListPage.tsx  VerificationPage.tsx  WrongAnswerCreatePage.tsx  WrongAnswerPage.tsx
frontend/src/stores/: extractionStore.ts  problemSetStore.ts  studentStore.ts
frontend/src/types/: problemSet.ts  student.ts  wrong-answer.ts  wrongAnswer.ts
frontend/src/utils/: wrong-answer-helpers.ts
